# MaiaOS

./: .dockerignore  .gitignore  .releaserc.json  AGENTS.md  ANALYSIS-consolidation.md  CHANGELOG.md  DOCS_ANALYSIS.md  REFACTOR_PLAN.md  REFACTOR_PLAN_DETAILED.md  biome.json  bunfig.toml  env.example  jsconfig.json  package.json  skills-lock.json
.cursor/: mcp.json  worktrees.json
.husky/: commit-msg  pre-commit  pre-push
.sentrux/: AUDIT.md  TEST-GAPS.md  rules.toml
NEXT/: README.md  package.json
libs/: .gitkeep
libs/maia-ai/: LICENSE  README.md  package.json  pyproject.toml
libs/maia-ai/artifacts/: 03-open-source-references.md  06-unsloth-and-alternatives.md  08-ui-design-research.md
libs/maia-ai/benchmarks/: bench.py
libs/maia-ai/src/: index.js
libs/maia-ai/src/maia_ai/: __init__.py  invoice_tool.py  server.py  tts.py
scripts/: boot-banner.js  bundle-maia-db-cojson.mjs  check-cojson-privacy.js  check-m2-app-bundle.mjs  check-maia-app-no-inline-handlers.mjs  check-universe-registry.mjs  cleanup-non-next-releases.sh  cojson-rn-notes.txt  deploy-all.sh  dev-app.js  dev-desktop.js  dev-game.js  dev-maia.js  dev-sync.js  dev.js  export-cursor-session-to-recovery.mjs  fix-seed-config-imports.mjs  fly-build-args-verify.js  fly-next-setup.md  fly-secrets-from-env.sh  fly-secrets-sync.js  fly-tigris-setup.md  format-maia.js  free-port.js  generate-favicons.js  generate-llm-docs.js  generate-maia-universe-registry.mjs  generate-migrate-registries.mjs  homebrew-arm-bootstrap.sh  lint-import-invariants.mjs  lint-naming-invariants.mjs  logger.js  sync-assets.js  (+7 more)
(+4422 files in other folders)
